<resources>
    <string name="app_name">LetsGo</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_change_login">Recover your login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_forgot_info">ForgotInfoActivity</string>
    <string name="forgot_username_text">Enter your email</string>
    <string name="forgot_password_text">Enter your username</string>
    <string name="submit_button">Submit</string>
    <string name="shared_preference">UsernameFile</string>>
    <string name="create_account">Create Account</string>
    <string name="enter_username">Enter Login ID</string>
    <string name="enter_displayname">Enter Display Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_phone">Enter Phone Number</string>
    <string name="change_username">Change Display Name</string>
    <string name="notificationTitle">Notifications: </string>
    <string name="title_activity_meeting_destination">Map</string>
    <string name="title_activity_meeting_destination_non_admin">Map</string>>
</resources>
