<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text= "@string/create_account"
        android:textColor="@color/royalAway"
        android:textSize="24sp"
        android:textStyle="bold"
        android:id="@+id/textView" />

    <EditText
        android:id="@+id/createAccountUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="textPersonName" />

        <EditText
            android:id="@+id/createAccountEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/createAccountConfirmPassword"
            android:layout_below="@+id/createAccountConfirmPassword"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="15dp"
            android:ems="10"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/createAccountEnterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/createAccountUserName"
        android:layout_below="@+id/createAccountUserName"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/createAccountConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/createAccountEnterPassword"
        android:layout_below="@+id/createAccountEnterPassword"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/createAccountSubmitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_margin="15dp"
        android:background="#1E90FF"
        android:onClick="createAccount"
        android:text="@string/create_account"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/enterPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/createAccountEmail"
        android:layout_alignStart="@+id/createAccountEmail"
        android:layout_below="@+id/createAccountEmail"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/enter_phone" />
</RelativeLayout>
