<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="t.systematic.letsgo.AccountManagement.ForgotInfoActivity">

    <TextView
        android:id="@+id/ForgotLoginTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/royalAway"
        />

    <EditText
        android:id="@+id/enterInfoBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/forgot_password_text"
        android:textColorHint="@color/colorAccent"
        android:textColor="@color/royalAway"
        android:inputType="textPersonName"
        android:layout_below="@id/ForgotLoginTextView"
        android:visibility="invisible"
        />



    <EditText
        android:id="@+id/enterEmailBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/forgot_username_text"
        android:textColorHint="@color/colorAccent"
        android:inputType="textEmailAddress"
        android:layout_below="@id/ForgotLoginTextView"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/forgotLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="80dp"
        android:layout_alignParentBottom="true"
        android:text="@string/submit_button"
        />

</RelativeLayout>
